--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -2252,41 +2252,42 @@ body.page-profile-settings.consults input[type="submit"] {
   border-bottom: solid 1px #aaa;
   z-index: 1;
   display: none;
+  cursor: hand;
 }
-/* line 57, schedule.less */
+/* line 58, schedule.less */
 .schedule-container .grid .reserved-marker p {
   font-size: 1.3rem;
   display: block;
   margin-left: 20px;
   margin-top: 6px;
 }
-/* line 63, schedule.less */
+/* line 64, schedule.less */
 .schedule-container .grid .reserved-marker.skype {
   border-color: #33b679;
   background: rgba(51, 152, 121, 0.4);
 }
-/* line 66, schedule.less */
+/* line 67, schedule.less */
 .schedule-container .grid .reserved-marker.skype p {
   color: #119457;
 }
-/* line 69, schedule.less */
+/* line 70, schedule.less */
 .schedule-container .grid .reserved-marker.skype.selected {
   border-color: #119457;
 }
-/* line 73, schedule.less */
+/* line 74, schedule.less */
 .schedule-container .grid .reserved-marker.private {
   border-color: #fac944;
   background: rgba(250, 201, 68, 0.4);
 }
-/* line 76, schedule.less */
+/* line 77, schedule.less */
 .schedule-container .grid .reserved-marker.private p {
   color: #d39a00;
 }
-/* line 79, schedule.less */
+/* line 80, schedule.less */
 .schedule-container .grid .reserved-marker.private.selected {
   border-color: #d8a722;
 }
-/* line 83, schedule.less */
+/* line 84, schedule.less */
 .schedule-container .grid .reserved-marker .slider-top {
   left: 50%;
   margin-left: -2px;
@@ -2298,7 +2299,7 @@ body.page-profile-settings.consults input[type="submit"] {
   background: #fff;
   cursor: s-resize;
 }
-/* line 94, schedule.less */
+/* line 95, schedule.less */
 .schedule-container .grid .reserved-marker .slider-bottom {
   left: 50%;
   margin-left: -2px;
@@ -2310,7 +2311,7 @@ body.page-profile-settings.consults input[type="submit"] {
   background: #fff;
   cursor: s-resize;
 }
-/* line 108, schedule.less */
+/* line 109, schedule.less */
 form {
   display: block;
   float: left;
