--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -54,6 +54,7 @@
 			border-bottom: solid 1px #aaa;
 			z-index: 1;
 			display: none;
+			cursor: hand;
 			p{
 				font-size:1.3rem;
 				display: block;
