--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -91,6 +91,7 @@
 				border:solid 1px #33b679;
 				background: #fff;
 				cursor: s-resize;
+				z-index: 1;
 			}
 			.slider-bottom{
 				left:50%;
@@ -102,6 +103,7 @@
 				border:solid 1px #33b679;
 				background: #fff;
 				cursor: s-resize;
+				z-index: 1;
 			}
 		}
 	}
