--- a/consult/less/module_calendar.less
+++ b/consult/less/module_calendar.less
@@ -1,4 +1,4 @@
-.calendar{
+.calendar, .calendars .months .month{
     border-radius:6px;
     -moz-border-radius:6px;
     -o-border-radius:6px;
@@ -6,21 +6,18 @@
     overflow: hidden;
     width:300px;
     margin:10px;
-    box-shadow:0 0 3px #ccc;
     *{
         position: relative;
     }
     header{
         height:30px;
-        background: #7abcff; /* Old browsers */
-        background: -moz-linear-gradient(top,  #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
-        background: -webkit-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
-        background: -o-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
-        background: -ms-linear-gradient(top,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
-        background: linear-gradient(to bottom,  #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
-        color:#fff;
+        border-radius:3px;
+        -moz-border-radius:3px;
+        -o-border-radius:3px;
+        -webkit-border-radius:3px;
+        color:@sea;
+        border:solid 1px @blue_light;
+        font-weight: 500;
         *{
             line-height: 30px;
         }
@@ -48,24 +45,33 @@
     .container{
         box-sizing:border-box;
         -moz-box-sizing:border-box;
-        padding:0 5px 5px 5px;
         background: #fff;
-        border:solid 1px #ddd;
         border-radius:0 0 6px 6px;
         -moz-border-radius:0 0 6px 6px;
         -o-border-radius:0 0 6px 6px;
         -webkit-border-radius:0 0 6px 6px;
         section.day-of-weeks{
             overflow: hidden;
-            height:20px;
+            height:32px;
+            margin-top: 2px;
+            margin-bottom: 2px;
             .item{
                 box-sizing:border-box;
                 -moz-box-sizing:border-box;
-                width: 14.284%;
+                width: 13.684%;
                 float: left;
                 text-align: center;
-                line-height: 20px;
+                line-height: 30px;
                 color:@sea;
+                border:solid 1px @blue_light;
+                margin-left: 2px;
+                border-radius:3px;
+                -moz-border-radius:3px;
+                -o-border-radius:3px;
+                -webkit-border-radius:3px;
+                &:first-child{
+                    margin-left: 0;
+                }
             }
         }
         section.day-of-month{
@@ -73,34 +79,65 @@
                 display: block;
                 box-sizing:border-box;
                 -moz-box-sizing:border-box;
-                width: 14.284%;
+                width: 13.594%;
                 float: left;
                 text-align: center; 
-                height:35px;
-                line-height: 35px;
+                height:30px;
+                line-height: 30px;
                 text-decoration: none;
+                border:solid 1px @blue_light;
+                margin-left: 2px;
+                margin-bottom: 2px;
+                border-radius:3px;
+                -moz-border-radius:3px;
+                -o-border-radius:3px;
+                -webkit-border-radius:3px;
+                color:@sea;
                 &.weekend{
-                    background: @red;
+                    background-color: rgba(138, 164, 162, 0.7);
+                    border-color: rgba(138, 164, 162, 0.7);
                     color:@white;
+                    border-radius: 5px;
                 }
                 &.today{
-                    background: #ffaa3e;
+                    background: @green;
                     box-shadow: inset 0 0 2px #666;
                     color:#fff;
                     &:hover{
-                        background: #ffaa3e;
+                        background: @green - #222;
                         box-shadow: inset 0 0 2px #666;
+                    }
+                }
+                &.skype{
+                    background-color: #9cebc6;
+                    border-color: #9cebc6;
+                    color:@white;
+                    border-bottom:solid 3px @yellow;
+                    &:hover{
+                        background: #9cebc6 - #222;
+                        border-color:#9cebc6 - #222;
+                        border-bottom:solid 3px @yellow;
+                    }
+                }
+                &.private{
+                    background-color: #ffdf5c;
+                    border-color: #ffdf5c;
+                    color:@white;
+                    border-bottom:solid 3px @yellow;
+                    &:hover{
+                        background: #ffdf5c - #222;
+                        border-color:#ffdf5c - #222;
+                        border-bottom:solid 3px @yellow;
                     }
                 }
             }
             a.item{
-                background: #dbefe5;
-                border:solid 2px #fff;
                 &:hover{
-                    background: #dbefe5 - #222;
+                    background: @blue_light;
                 }
                 &.weekend:hover{
-                    background: @red - #222;
+                    background-color: rgba(138, 164, 162, 0.9);
+                    border-color: rgba(138, 164, 162, 0.9);
                 }
             }
         }
