--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -1,3 +1,200 @@
+
+body.page-profile-schedule{
+	& > .wrapper{
+		.content{
+			margin-top: 20px;
+			.day{
+				padding:5px 0;
+				.day-container{
+					float: left;
+					left: 50%;
+					.day-choose{
+						float: right;
+						right: 50%;
+						padding-left: 50px;
+						padding-right: 50px;
+						p{
+							text-align: center;
+							a{
+								color: @sea;
+								font-size: 1.4rem;
+								font-weight: 500;
+								text-align: center;
+								text-decoration: none;
+								&:hover{
+									text-decoration: underline;
+								}
+							}
+						}
+						a.arrow{
+							position: absolute;
+							display: block;
+							top:11px;
+							&.left{
+								left:0;
+							}
+							&.right{
+								right:0;
+							}
+						}
+					}
+				}
+			}
+			.calendars{
+				//position: absolute;
+				position: absolute;
+				width: 745px;
+				height: 400px;
+				z-index: 2;
+				left:50%;
+				margin-left: -370px;
+				margin-top: 10px;
+				border:solid 1px @blue_light;
+				i.close{
+					cursor: pointer;
+					float: right;
+					display: block;
+					margin-right: 22px;
+					font-size:1.8rem;
+					&:hover{
+						color:@sea;
+					}
+				}
+				a#today{
+					margin-left: 20px;
+				}
+				.months{
+					overflow: hidden;
+					div.month{
+						margin:20px;
+						float: left;
+						overflow: hidden;
+					}
+				}
+				.controls{
+					width: 95px;
+					margin:auto;
+					a{
+						display: block;
+						color:@sea_light;
+						font-size:1.8rem;
+						text-decoration: none;
+						&:hover{
+							color:@sea;
+						}
+						&.left{
+							float: left;
+						}
+						&.right{
+							float: right;
+						}
+					}
+				}
+			}
+			.schedule{
+				box-sizing:border-box;
+				-moz-box-sizing:border-box;
+				float: left;
+				width: 58%;
+				.schedule-container{
+					width: 100%;
+					padding:30px 30px 30px 50px;
+					.elements{
+						overflow: hidden;
+						margin-bottom: 20px;
+						padding-left: 10px;
+						.field{
+							overflow: hidden;
+							&.full-day{
+								float: left;
+							}
+							&.weekend{
+								float: right;
+							}
+							.checkbox.container{
+								float: left;
+							}
+							label{
+								display: block;
+								float: left;
+								margin:2px 10px;
+								color: @sea;
+								font-size: 1.2rem;
+							}
+						}
+					}
+				}
+			}
+			.today-events{
+				float: right;
+				width: 40%;
+				.events{
+					.event{
+						margin-bottom: 15px;
+						padding-left: 15px;
+						&.active{
+							background: @blue_light;
+						}
+						.border{
+							position: absolute;
+							width: 5px;
+							height: 100%;
+							left:0;
+							top:0;
+							z-index: 1;
+							border-radius:5px;
+							-moz-border-radius:5px;
+							-o-border-radius:5px;
+							-webkit-border-radius:5px;
+						}
+						&.skype{
+							.border{
+								background: @green;
+							}
+						}
+						&.private{
+							.border{
+								background: @yellow_dark;
+							}
+							h5.title{
+								color:@sea;
+							}
+						}
+						h5.title{
+							margin-top: 2px;
+							margin-bottom: 0;
+							padding-top: 0;
+							padding-bottom: 0;
+							font-family: Roboto;
+							color: @sky;
+							font-size: 1.4rem;
+							font-weight: 500;
+						}
+						p.participiant{
+							margin-bottom: 2px;
+							padding-bottom: 0;
+						}
+						p{
+							margin:4px 0;
+							font-size:1.4rem;
+							font-weight: 500;
+							color:@sea_light;
+							span.value{
+								color:@sea;
+							}
+							a{
+								color:@sky;
+								&:hover{
+									text-decoration: none;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
 .schedule-container{
 	position: relative;
 	width: 480px;
@@ -7,7 +204,7 @@
 		position: relative;
 		float: left;
 		text-align: left;
-		width: 40px;
+		width: 55px;
 		.hour{
 			height: 32px;
 			text-align: center;
@@ -21,7 +218,7 @@
 	.grid{
 		position: relative;
 		float: right;
-		width: 400px;
+		width: 420px;
 		-webkit-user-select:none;
 		.row{
 			border-bottom:solid 1px #b9d4cc;
