--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -103,6 +103,9 @@ body.page-profile-schedule{
 				-moz-box-sizing:border-box;
 				float: left;
 				width: 58%;
+				.edit-schedule{
+					display: none;
+				}
 				.schedule-container{
 					width: 100%;
 					padding:30px 30px 30px 50px;
