--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -1,10 +1,103 @@
 
 body.page-profile-schedule{
-	form{
-		display: block;
-		float: left;
-		width: 250px;
-		margin:10px;
+	.edit-schedule{
+		position: absolute;
+		z-index: 2;
+		width: 100%;
+		.fader{
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			background: rgba(255,255,255,0.5);
+		}
+		.content-block{
+			position: relative;
+			width: 465px;
+			left: 50%;
+			margin-left: -232px;
+			border:solid 1px @sea_light;
+			top:150px;
+			padding:0;
+			i.close{
+
+				font-size:1.4rem;
+				position: absolute;
+				right:20px;
+				top:23px;
+				cursor:pointer;
+				z-index: 1;
+				&:hover{
+					color:@sea;
+				}
+			}
+			h4{
+				padding-top:0;
+				margin-left: 20px;
+				margin-top: 20px;
+			}
+			form{
+				.field.begin, .field.end{
+					float: left;
+					width: 45%;
+					margin-right: 5%;
+				}
+				.unwork-time{
+					padding:30px 20px;
+				}
+				.free-time{
+					padding:30px 20px;
+					border-top:solid 1px @sea_light;
+					.type{
+						margin-left: 30px;
+						.field{
+							overflow: hidden;
+							margin:5px 0;
+						}
+					}
+					.select2-container{
+						width: 100% !important;
+						margin-top: 10px;
+					}
+					.field.begin, .field.end{
+						margin-top: 30px;
+					}
+				}
+				.consult{
+					padding:30px 20px;
+					border-top:solid 1px @sea_light;
+					.field.begin, .field.end{
+						margin-top: 0px;
+					}
+					.field.comment{
+						margin-top: 10px;
+						textarea{
+							height:80px;
+						}
+					}
+				}
+				.checkbox.container, .radio.container{
+					float: left;
+					margin-right: 10px;
+					& + label{
+						float: left;
+						margin-top: 2px;
+						color: @sea_light;
+						font-size: 1.2rem;
+						font-weight: 500;
+						text-align: left;
+					}
+				}
+				input[type="submit"]{
+					float: right;
+					margin-right: 20px;
+					margin-left: 20px;
+					margin-bottom: 20px;
+				}
+				input[type="button"]{
+					float: right;
+				}
+			}
+		}
 	}
 	& > .wrapper{
 		.content{
@@ -103,9 +196,6 @@ body.page-profile-schedule{
 				-moz-box-sizing:border-box;
 				float: left;
 				width: 58%;
-				.edit-schedule{
-					display: none;
-				}
 				.schedule-container{
 					width: 100%;
 					padding:30px 30px 30px 50px;
