--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -4,6 +4,7 @@ body.page-profile-schedule{
 		position: absolute;
 		z-index: 2;
 		width: 100%;
+		display: none;
 		.fader{
 			position: fixed;
 			width: 100%;
