--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -37,6 +37,9 @@ body.page-profile-schedule{
 				margin-top: 20px;
 			}
 			form{
+				.accordeon-container{
+					display:none;
+				}
 				.field.begin, .field.end{
 					float: left;
 					width: 45%;
