--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -264,6 +264,11 @@ body.page-profile-schedule{
 								color:@sea;
 							}
 						}
+						&.unwork{
+							.border{
+								background: #aaa;
+							}
+						}
 						h5.title{
 							margin-top: 2px;
 							margin-bottom: 0;
@@ -376,6 +381,16 @@ body.page-profile-schedule{
 				display: block;
 				margin-left: 20px;
 				margin-top: 6px;
+			}
+			&.unwork{
+				background: rgba(0,0,0,.4);
+				background: rgba(0,0,0,.1);
+				p{
+					color:#666;
+				}
+				&.selected{
+					background: rgba(0,0,0,.2);
+				}
 			}
 			&.skype{
 				border-color:#33b679;
