--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -45,7 +45,7 @@ body.page-profile-schedule{
 					width: 45%;
 					margin-right: 5%;
 				}
-				.unwork-time{
+				.unwork{
 					padding:30px 20px;
 				}
 				.free-time{
@@ -69,6 +69,19 @@ body.page-profile-schedule{
 				.consult{
 					padding:30px 20px;
 					border-top:solid 1px @sea_light;
+					.type{
+						margin-left: 30px;
+						.field{
+							overflow: hidden;
+							.checkbox.container{
+								float: left;
+								margin-right: 10px;
+								& + label{
+									margin-top: 4px;
+								}
+							}
+						}
+					}
 					.field.begin, .field.end{
 						margin-top: 0px;
 					}
@@ -251,7 +264,7 @@ body.page-profile-schedule{
 							-o-border-radius:5px;
 							-webkit-border-radius:5px;
 						}
-						&.skype{
+						&.skype, &.cards{
 							.border{
 								background: @green;
 							}
@@ -270,6 +283,7 @@ body.page-profile-schedule{
 							}
 						}
 						&.unwork{
+							display: none;
 							.border{
 								background: #aaa;
 							}
@@ -381,6 +395,14 @@ body.page-profile-schedule{
 			z-index: 1;
 			display: none;
 			cursor: hand;
+			i.fa.fa-cog{
+				cursor: pointer;
+				position: absolute;
+				font-size:1.2rem;
+				right:5px;
+				top:2px;
+				z-index: 1;
+			}
 			p{
 				font-size:1.3rem;
 				display: block;
@@ -390,6 +412,9 @@ body.page-profile-schedule{
 			&.unwork{
 				border-color: rgba(0,0,0,.4);
 				background: rgba(0,0,0,.1);
+				i.fa.fa-cog{
+					color: rgba(0,0,0,.4);
+				}
 				p{
 					color:#666;
 				}
@@ -397,9 +422,12 @@ body.page-profile-schedule{
 					border-color: rgba(0,0,0,.5);
 				}
 			}
-			&.skype{
+			&.skype, &.cards{
 				border-color:#33b679;
 				background: rgba(51,152,121,.4);
+				i.fa.fa-cog{
+					color: #33b679;
+				}
 				p{
 					color:#33b679 - #222;
 				}
@@ -410,6 +438,9 @@ body.page-profile-schedule{
 			&.consult{
 				border-color:#41b6ad;
 				background: rgba(74,208,197,.2);
+				i.fa.fa-cog{
+					color: #41b6ad;
+				}
 				p{
 					color:#35504e;
 				}
@@ -420,6 +451,9 @@ body.page-profile-schedule{
 			&.private{
 				border-color:#fac944;
 				background: rgba(250,201,68,.4);
+				i.fa.fa-cog{
+					color: #fac944 - #222;
+				}
 				p{
 					color:#d39a00;
 				}
