Вёрстка инфы о себе, просмотр профиля терапевта

--- a/cards/less/interface.less
+++ b/cards/less/interface.less
@@ -249,10 +249,10 @@ input[type="text"], textarea, input[type="password"], input[type="date"], input[
     }
 }
 .field{
-    span{
+    span.star{
         display: none;
     }
-    &.required span{
+    &.required span.star{
         color:@red;
         display: inline;
     }
