--- a/cards/less/global.less
+++ b/cards/less/global.less
@@ -204,6 +204,37 @@ header.header {
         }
     }
 }
+.user-menu-section {
+    background: #f8f8f8;
+    overflow: hidden;
+    padding: 20px 0;
+    box-shadow: 1px 2px 0px 0.00px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 1px 2px 0px 0.00px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 1px 2px 0px 0.00px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 1px 2px 0px 0.00px rgba(0, 0, 0, 0.1);
+    .wrapper {
+        .user-menu-container {
+            right: 50%;
+            float: right;
+        }
+        .user-menu {
+            left: 50%;
+            float: left;
+            li {
+                margin:0 10px;
+                float: left;
+            }
+            a {
+                color: @bordo;
+                font: 400 1.4rem  Roboto;
+                text-decoration: none;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+}
 
 //FOOTER
 .footer {
