--- a/cards/less/page_profile_settings.less
+++ b/cards/less/page_profile_settings.less
@@ -102,150 +102,224 @@ body.page-profile-settings{
         }
     }
     &.about-me{
-        form{
-            .field.upload{
-                .preview{
-                    float: left;
-                    width: 80px;
-                    margin-right: 15px;
-                    border-radius:4px;
-                    -o-border-radius:4px;
-                    -moz-border-radius:4px;
-                    -webkit-border-radius:4px;
-                    overflow: hidden;
-                    img{
-                        display: block;
-                        width: 100%;
-                    }
-                }
-                .buttons{
-                    float: left;
-                    width: 38%;
-                    .btn{
-                        margin-bottom: 10px;
-                    }
-                }
-                p{
+        .field.upload{
+            .preview{
+                float: left;
+                width: 80px;
+                margin-right: 15px;
+                border-radius:4px;
+                -o-border-radius:4px;
+                -moz-border-radius:4px;
+                -webkit-border-radius:4px;
+                overflow: hidden;
+                img{
                     display: block;
-                    overflow: hidden;
-                    text-align: center;
-                    font-size:1.2rem;
-                    margin-top: 10px;
-                    top: 7px;
+                    width: 100%;
                 }
             }
-            a.add-document-button{
-                margin-top: 15px;
+            .buttons{
+                float: left;
+                width: 38%;
+                .btn{
+                    margin-bottom: 10px;
+                }
+            }
+            p{
+                display: block;
+                overflow: hidden;
                 text-align: center;
                 font-size:1.2rem;
-                font-weight: 500;
-                background: #e9f7f1;
-                display: block;
-                padding:5px 0;
-                color:@bordo_light;
-                text-decoration: none;
-                margin-bottom: 30px;
-                &:hover{
-                    background: #e9f7f1 - #111;
-                    color:@bordo;
+                margin-top: 10px;
+                top: 7px;
+            }
+        }
+        a.add-document-button{
+            margin-top: 15px;
+            text-align: center;
+            font-size:1.2rem;
+            font-weight: 500;
+            background: #e9f7f1;
+            display: block;
+            padding:5px 0;
+            color:@bordo_light;
+            text-decoration: none;
+            margin-bottom: 30px;
+            &:hover{
+                background: #e9f7f1 - #111;
+                color:@bordo;
+            }
+        }
+        .select2-container{
+            width: 45% !important;
+            margin-right: 4%;
+        }
+        section.specialization{
+            .field{
+                float: left;
+                width: 48%;
+                margin:5px 0;
+                &:nth-child(even){
+                    margin-right: 0;
                 }
-            }
-            .select2-container{
-                width: 40% !important;
-                margin-right: 4%;
-            }
-            section.specialization{
-                .field{
+                .checkbox{
                     float: left;
-                    width: 48%;
-                    margin:5px 0;
-                    &:nth-child(even){
-                        margin-right: 0;
+                    margin-right: 10px;
+                    &.checked + label{
+                        color:@pink;
                     }
-                    .checkbox{
+                }
+                label{
+                    display: block;
+                    overflow: hidden;
+                    margin:2px 0;
+                    font-size:500;
+                }
+            }
+            input[type="text"]{
+                margin-top: 20px;
+            }
+        }
+        section.education{
+            .items{
+                overflow: hidden;
+                .item{
+                    overflow: hidden;
+                    margin-bottom: 30px;
+                    .controls{
                         float: left;
-                        margin-right: 10px;
-                        &.checked + label{
-                            color:@pink;
-                        }
-                    }
-                    label{
-                        display: block;
-                        overflow: hidden;
-                        margin:2px 0;
-                        font-size:500;
-                    }
-                }
-                input[type="text"]{
-                    margin-top: 20px;
-                }
-            }
-            section.education{
-                .university{
-                    .input-container{
-                        overflow: hidden;
-                    }
-                    a#remove-university{
-                        display: block;
-                        float: right;
-                        border-radius:15px;
-                        -o-border-radius:15px;
-                        -moz-border-radius:15px;
-                        -webkit-border-radius:15px;
-                        width: 15px;
-                        height: 15px;
-                        line-height: 15px;
-                        border:solid 3px @bordo_light;
-                        text-align: center;
-                        margin-left: 15px;
-                        margin-top: 7px;
                         i{
-                            color:@bordo_light;
+                            font-size:1.8rem;
+                            display: block;
+                            margin-right: 10px;
+                            margin-bottom: 5px;
+                            cursor:pointer;
+                            &.fa-times-circle-o{
+                                color:@red;
+                            }
                         }
-                        &:hover{
-                            border-color:@bordo;
-                            i{
+                    }
+                    .scan-container{
+                        float: left;
+                        width: 60px;
+                        margin-right: 15px;
+                        img{
+                            display: block;
+                            width: 100%;
+                        }
+                    }
+                    .info{
+                        overflow: hidden;
+                        p{
+                            margin-top: 0;
+                            margin-bottom: 5px;
+                            span.key{
+                                font-weight: bold;
                                 color:@bordo;
                             }
                         }
                     }
                 }
             }
-            section.professional{
-                .certificate{
-                    .input-container{
-                        overflow: hidden;
+            form.university{
+                .input-container{
+                    overflow: hidden;
+                }
+                .field.special, .field.quality{
+                    float: left;
+                    width: 45%;
+                    margin-right: 5%;
+                }
+                input[type="submit"]{
+                    width: 100%;
+                    border-radius: 5px;
+                    background-color: @pink_light;
+                    width: 100%;
+                    border:none;
+                    cursor:pointer;
+                    color:@bordo_light;
+                    display: block;
+                    padding:6px 0;
+                    &:hover{
+                        background-color: @pink_light - #222;
+                        color:@bordo;
                     }
-                    a#remove-certificate{
-                        display: block;
-                        float: right;
-                        border-radius:15px;
-                        -o-border-radius:15px;
-                        -moz-border-radius:15px;
-                        -webkit-border-radius:15px;
-                        width: 15px;
-                        height: 15px;
-                        line-height: 15px;
-                        border:solid 3px @bordo_light;
-                        text-align: center;
-                        margin-left: 15px;
-                        margin-top: 7px;
+                }
+            }
+        }
+        section.professional{
+            .items{
+                overflow: hidden;
+                .item{
+                    overflow: hidden;
+                    margin-bottom: 30px;
+                    .controls{
+                        float: left;
                         i{
-                            color:@bordo_light;
+                            font-size:1.8rem;
+                            display: block;
+                            margin-right: 10px;
+                            margin-bottom: 5px;
+                            cursor:pointer;
+                            &.fa-times-circle-o{
+                                color:@red;
+                            }
                         }
-                        &:hover{
-                            border-color:@bordo;
-                            i{
+                    }
+                    .scan-container{
+                        float: left;
+                        width: 60px;
+                        margin-right: 15px;
+                        img{
+                            display: block;
+                            width: 100%;
+                        }
+                    }
+                    .info{
+                        overflow: hidden;
+                        p{
+                            margin-top: 0;
+                            margin-bottom: 5px;
+                            span.key{
+                                font-weight: bold;
                                 color:@bordo;
                             }
                         }
                     }
                 }
             }
-            input[type="submit"]{
-                margin-right: 20px;
-                margin-top: 30px;
+            form.cert{
+                width: 100%;
+                .input-container{
+                    overflow: hidden;
+                }
+                .field.year, .field.quality{
+                    float: left;
+                    width: 45%;
+                    margin-right: 5%;
+                    .select2-container{
+                        width: 100% !important;
+                    }
+                }
+                input[type="submit"]{
+                    width: 100%;
+                    border-radius: 5px;
+                    background-color: @pink_light;
+                    width: 100%;
+                    border:none;
+                    cursor:pointer;
+                    color:@bordo_light;
+                    display: block;
+                    padding:6px 0;
+                    &:hover{
+                        background-color: @pink_light - #222;
+                        color:@bordo;
+                    }
+                }
             }
+        }
+        input[type="submit"]{
+            margin-right: 20px;
+            margin-top: 30px;
         }
     }
     &.contacts{
